--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <h1>Estudo e crio e recrio projetos em HTML, CSS, figma e scratch.</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
+            <p class="badge bg-secondary">Portugol</p>
             <p class="badge bg-secondary">figma</p>
             <p class="badge bg-secondary">Scratch</p>
         </div>
