--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Luiz</p>
-        <h1>Estudo e crio e recrio projetos em HTML, CSS, figma e scratch.</p>
+        <h1>Estudo e crio e recrio projetos em HTML, CSS, Portugol, figma e scratch.</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">Portugol</p>
