--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://github.com/femascheti/minEstudo e crio e recrio projetos em HTML, CSS, Portugol, figma e scratch.has-leituras">Ver código do projeto</a>
                 </div>
             </div>
         </div>
