--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
                         vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    <a href="https://sourceforge.net/projects/visualg30/">Ver código do
                         projeto</a>
                 </div>
             </div>
