--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
                         vivo</a>
-                    <a href="https://sourceforge.net/projects/visualg30/">Ver código do
+                    <a href="https://www.figma.com/design/mPZqZXm3vRKAtkgvwk9JT1/Untitled?node-id=0-1&t=o7bb2KfyD4CzG9DG-1">Ver código do
                         projeto</a>
                 </div>
             </div>
