--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                    <a href="https://scratch.mit.edu/projects/2176968/">Ver projeto ao
                         vivo</a>
                     <a href="https://www.figma.com/design/mPZqZXm3vRKAtkgvwk9JT1/Untitled?node-id=0-1&t=o7bb2KfyD4CzG9DG-1">Ver código do
                         projeto</a>
@@ -114,7 +114,7 @@
                 </div>
                
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href="https://scratch.mit.edu/projects/407329986/">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
