--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1>Estudo e crio projetos em HTML, CSS e scratch.</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">Portugol</p>
-            <p class="badge bg-secondary">figma</p>
+            <p class="badge bg-secondary">HTML</p>
+            <p class="badge bg-secondary">CSS</p>
             <p class="badge bg-secondary">Scratch</p>
         </div>
     </header>
@@ -44,8 +44,8 @@
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Steam azul</h5>
-                        <p class="card-text">Este projeto disponibiliza uma pagina de jogos de PC e console para o mobile, sendo ele android ou IOS.</p>
+                        <h5 class="card-title">Super Mario</h5>
+                        <p class="card-text">Este jogo recria o nostálgico e memorável super mario bros, do NES.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
