--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/2176968/">Ver projeto ao
+                    <a href="https://scratch.mit.edu/projects/1194019821/">Ver projeto ao
                         vivo</a>
                     <a href="https://www.figma.com/design/mPZqZXm3vRKAtkgvwk9JT1/Untitled?node-id=0-1&t=o7bb2KfyD4CzG9DG-1">Ver código do
                         projeto</a>
