--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p class="lead">Eu sou _Luiz Cícero_</p>
+        <h1>Eu estudo Programação</h1>
+        <p>Sou estudante de programação e pratico desenvolvendo projetos que sejão práticos e também recrio jogos para diversão, aqui estão alguns dos projetos que desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -112,8 +110,8 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://scratch.mit.edu/projects/990753529/">Ver projeto ao vivo</a>
+                    <a href=https://scratch.mit.edu/projects/990753529/editor/>Ver código do projeto</a>
                 </div>
             </div>
         </div>
