--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="modal-footer">
                     <a href="https://scratch.mit.edu/projects/1194019821/">Ver projeto ao
                         vivo</a>
-                    <a href="https://scratch.mit.edu/projects/1194019821/editor/>Ver código do projeto</a>
+                    <a href="https://scratch.mit.edu/projects/1194019821/editor/">Ver código do projeto</a>
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="modal-footer">
                     <a href="https://scratch.mit.edu/projects/1195644479/">Ver projeto ao vivo</a>
-                    <a href="https://scratch.mit.edu/projects/1195644479/editor/>Ver código do projeto</a>
+                    <a href="https://scratch.mit.edu/projects/1195644479/editor/">Ver código do projeto</a>
                 </div>
             </div>
         </div>
