--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/avatar-perfil.png" alt="avatar da Luiz" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou _Luiz Cícero_</p>
+        <p class="lead">Eu sou Luiz Cícero</p>
         <h1>Eu estudo Programação</h1>
         <p>Sou estudante de programação e pratico desenvolvendo projetos que sejão práticos e também recrio jogos para diversão, aqui estão alguns dos projetos que desenvolvi!</p>
         <p>Minhas habilidades</p>
@@ -33,10 +33,7 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Meu projeto: Super Trunfo.</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <p class="card-text">Ésta é a replica de um jogo famoso e divertido chamado: Super Trunfo, e ésta é a minha versão deste maravilhoso game.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -49,10 +46,7 @@
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Meu projeto: Super Mario.</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <p class="card-text">Ésta é a minha segunda réplica de um game histótico e nostálgico dos anos 80, o Super Mario Bros.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
@@ -66,9 +60,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Meu projeto: Snake Game.
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">E pos fim, ésta é minha terceira réplica de um game divertido e um ótimo passatempo, muito famoso nos anos 90, o chamado: Snake Game.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
