--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Meu projeto: Super Trunfo.</h5>
-                        <p class="card-text">Ésta é a replica de um jogo famoso e divertido chamado: Super Trunfo, e ésta é a minha versão deste maravilhoso game.
+                        <p class="card-text">Ésta é a réplica de um jogo famoso e divertido chamado: Super Trunfo, e ésta é a minha versão deste maravilhoso game.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -60,7 +60,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Meu projeto: Snake Game.
                         </h5>
-                        <p class="card-text">E pos fim, ésta é minha terceira réplica de um game divertido e um ótimo passatempo, muito famoso nos anos 90, o chamado: Snake Game.
+                        <p class="card-text">E por fim, ésta é minha terceira réplica de um game divertido e um ótimo passatempo, muito famoso nos anos 90, o chamado: Snake Game.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
